<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">

        <LinearLayout style="@style/AdminInfoRow">
            <TextView style="@style/AdminInfoLabel" android:text="ID" />
            <View android:layout_height="0dp" android:layout_width="0dp" android:layout_weight="1"/>
            <TextView android:id="@+id/tvEditId" style="@style/AdminInfoValue" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#999999"
            android:layout_marginVertical="5dp"/>

        <LinearLayout style="@style/AdminInfoRow">
            <TextView style="@style/AdminInfoLabel" android:text="@string/full_name" />
            <View android:layout_height="0dp" android:layout_width="0dp" android:layout_weight="1"/>
            <EditText android:id="@+id/etEditFullName"
                style="@style/AdminEditInfoValue"
                android:inputType="textPersonName"
                android:hint="@string/enter_name"/>
        </LinearLayout>

        <LinearLayout style="@style/AdminInfoRow">
            <TextView style="@style/AdminInfoLabel" android:text="@string/email" />
            <View android:layout_height="0dp" android:layout_width="0dp" android:layout_weight="1"/>
            <EditText android:id="@+id/etEditEmail"
                style="@style/AdminEditInfoValue"
                android:inputType="textEmailAddress"
                android:hint="@string/enter_email"/>
        </LinearLayout>

        <LinearLayout style="@style/AdminInfoRow">
            <TextView style="@style/AdminInfoLabel" android:text="@string/address" />
            <View android:layout_height="0dp" android:layout_width="0dp" android:layout_weight="1"/>
            <EditText android:id="@+id/etEditAddress"
                style="@style/AdminEditInfoValue"
                android:inputType="textPostalAddress"
                android:hint="@string/enter_address"/>
        </LinearLayout>

        <LinearLayout style="@style/AdminInfoRow">
            <TextView style="@style/AdminInfoLabel" android:text="@string/phone" />
            <View android:layout_height="0dp" android:layout_width="0dp" android:layout_weight="1"/>
            <EditText android:id="@+id/etEditPhone"
                style="@style/AdminEditInfoValue"
                android:inputType="phone"
                android:hint="@string/enter_phone"/>
        </LinearLayout>

        <LinearLayout style="@style/AdminInfoRow">
            <TextView style="@style/AdminInfoLabel" android:text="@string/date_of_birth" />
            <View android:layout_height="0dp" android:layout_width="0dp" android:layout_weight="1"/>
            <EditText android:id="@+id/etEditDob"
                style="@style/AdminEditInfoValue"
                android:inputType="date"
                android:focusable="false"
                android:clickable="true"
                android:hint="@string/select_date"/>
        </LinearLayout>

        <LinearLayout style="@style/AdminInfoRow">
            <TextView style="@style/AdminInfoLabel" android:text="@string/role" />
            <View android:layout_height="0dp" android:layout_width="0dp" android:layout_weight="1"/>
            <Spinner
                android:id="@+id/spEditRole"
                style="@style/AdminEditInfoValue"
                android:layout_height="wrap_content"
                android:spinnerMode="dropdown"
                android:paddingTop="0dp"
                android:paddingBottom="0dp"
                android:minHeight="1dp"
                android:textAlignment="textEnd" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>