<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">

        <LinearLayout style="@style/AdminInfoRow">
            <TextView style="@style/AdminInfoLabel" android:text="ID" />
            <View
                android:layout_height="0dp"
                android:layout_width="0dp"
                android:layout_weight="1"/>
            <TextView android:id="@+id/tvValueId" style="@style/AdminInfoValue" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#999999"
            android:layout_marginVertical="5dp"/>

        <LinearLayout style="@style/AdminInfoRow">
            <TextView style="@style/AdminInfoLabel" android:text="@string/label_fullname" />
            <View
                android:layout_height="0dp"
                android:layout_width="0dp"
                android:layout_weight="1"/>
            <TextView android:id="@+id/tvValueFullName" style="@style/AdminInfoValue" />
        </LinearLayout>

        <LinearLayout style="@style/AdminInfoRow">
            <TextView style="@style/AdminInfoLabel" android:text="@string/label_email" />
            <View
                android:layout_height="0dp"
                android:layout_width="0dp"
                android:layout_weight="1"/>
            <TextView android:id="@+id/tvValueEmail" style="@style/AdminInfoValue" />
        </LinearLayout>

        <LinearLayout style="@style/AdminInfoRow">
            <TextView style="@style/AdminInfoLabel" android:text="@string/label_address" />
            <View
                android:layout_height="0dp"
                android:layout_width="0dp"
                android:layout_weight="1"/>
            <TextView android:id="@+id/tvValueAddress" style="@style/AdminInfoValue" />
        </LinearLayout>

        <LinearLayout style="@style/AdminInfoRow">
            <TextView style="@style/AdminInfoLabel" android:text="@string/label_phone" />
            <View
                android:layout_height="0dp"
                android:layout_width="0dp"
                android:layout_weight="1"/>
            <TextView android:id="@+id/tvValuePhone" style="@style/AdminInfoValue" />
        </LinearLayout>

        <LinearLayout style="@style/AdminInfoRow">
            <TextView style="@style/AdminInfoLabel" android:text="@string/label_birthdate" />
            <View
                android:layout_height="0dp"
                android:layout_width="0dp"
                android:layout_weight="1"/>
            <TextView android:id="@+id/tvValueDob" style="@style/AdminInfoValue" />
        </LinearLayout>

        <LinearLayout style="@style/AdminInfoRow">
            <TextView style="@style/AdminInfoLabel" android:text="@string/role" />
            <View
                android:layout_height="0dp"
                android:layout_width="0dp"
                android:layout_weight="1"/>
            <TextView android:id="@+id/tvValueRole" style="@style/AdminInfoValue" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#999999"
            android:layout_marginVertical="5dp"/>

        <LinearLayout style="@style/AdminInfoRow">
            <TextView style="@style/AdminInfoLabel" android:text="@string/banned" />
            <View
                android:layout_height="0dp"
                android:layout_width="0dp"
                android:layout_weight="1"/>
            <TextView android:id="@+id/tvValueBanned" style="@style/AdminInfoValue" />
        </LinearLayout>

        <LinearLayout style="@style/AdminInfoRow">
            <TextView style="@style/AdminInfoLabel" android:text="@string/deleted" />
            <View
                android:layout_height="0dp"
                android:layout_width="0dp"
                android:layout_weight="1"/>
            <TextView android:id="@+id/tvValueDeleted" style="@style/AdminInfoValue" />
        </LinearLayout>

    </LinearLayout>
</ScrollView>