<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="30dp"
    android:background="@color/background">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_account"
            android:textColor="@color/text"
            android:textSize="36sp"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/enter_your_email_to_get_started"
            android:textSize="20sp"
            android:textColor="@color/text_secondary" />

        <!--    Enter email    -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40sp"
            android:text="@string/email_address"
            android:textStyle="bold"
            android:textSize="26sp"
            android:textColor="@color/text" />
        <EditText
            android:id="@+id/edtRegisterEmail"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:textColor="@color/black"
            android:autofillHints=""
            android:background="@drawable/edit_textbox"
            android:hint="@string/example_gmail_com"
            android:inputType="textEmailAddress" />
        <Button
            android:id="@+id/btnEmailContinue"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/primary"
            android:text="@string/next"
            android:textAllCaps="false"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:orientation="horizontal">
            <View android:layout_width="0dp" android:layout_weight="1" android:layout_height="1dp" android:background="#CCCCCC" />
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/or_continue_with" android:padding="8dp" android:textSize="16sp"/>
            <View android:layout_width="0dp" android:layout_weight="1" android:layout_height="1dp" android:background="#CCCCCC" />
        </LinearLayout>

        <!--    social login    -->
        <Button
            android:id="@+id/btnGoogle"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginTop="20dp"
            android:backgroundTint="#d4372f"
            android:text="@string/google"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            app:icon="@drawable/google"
            app:iconGravity="textStart"
            app:iconPadding="12dp"
            app:iconSize="20dp"/>

        <Button
            android:id="@id/btnFacebook"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginTop="20dp"
            android:backgroundTint="#2b20f7"
            android:text="@string/facebook"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            app:icon="@drawable/facebook"
            app:iconGravity="textStart"
            app:iconPadding="10dp"
            app:iconSize="20dp"/>

        <!--    login button    -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="20dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/already_have_an_account"
                android:textSize="18sp"
                android:textColor="@color/text_secondary" />
            <TextView
                android:id="@+id/tvLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/primary" />
        </LinearLayout>
    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:indeterminateTint="@color/primary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>